--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,8 @@ repository: https://github.com/mobiten/flutter_phoenix
 issue_tracker: https://github.com/mobiten/flutter_phoenix/issues
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=1.19.0 <3.0.0"
+  flutter: ">=0.4.1 <=1.17.0"
 
 dependencies:
   flutter:
